# gemma4-audio

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python.yml
gemma4_asr/: __init__.py  __main__.py  cli.py  eval.py  metrics.py  output.py
gemma4_asr/backends/: __init__.py  base.py  mlx.py  transformers.py  vllm.py
gemma4_asr/datasets/: __init__.py  base.py  librispeech.py
gemma4_audio/: __init__.py  __main__.py  audio.py  chunking.py  cli.py  config.py  eval.py  metrics.py  output.py
gemma4_audio/backends/: __init__.py  base.py  mlx.py  transformers.py  vllm.py
gemma4_audio/datasets/: __init__.py  base.py  librispeech.py  open_asr.py
scripts/: aggregate_results.py
tests/: conftest.py  test_aggregate_results.py  test_chunking.py  test_datasets.py  test_e2e.py  test_metrics.py
