[project]
name = "gemma4-audio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "hf-transfer>=0.1.9",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "numpy",
    "pillow>=12.2.0",
    "sacrebleu>=2.6.0",
    "tqdm>=4.67.3",
    "whisper-normalizer>=0.1.12",
]

[project.optional-dependencies]
transformers = [
    "accelerate>=1.13.0",
    "torch>=2.11.0",
    "torchcodec>=0.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.3",
]
vllm = [
    "vllm[audio]>=0.19",
    "torchcodec==0.10.*",
]
mlx = [
    "mlx-vlm>=0.4.4",
    "torchcodec",
]
quantization = [
    "bitsandbytes>=0.49.2",
]

[tool.uv]
conflicts = [
    [
        { extra = "transformers" },
        { extra = "vllm" },
        { extra = "mlx" },
    ],
]

[project.scripts]
g4 = "gemma4_audio.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that download data or require GPU (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
